# lumiverb

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  README.md  alembic-control.ini  alembic-tenant.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: algorithms.mdc  architecture.mdc  cli.mdc  database.mdc  testing.mdc  workers.mdc
clients/lumiverb-app/: .gitignore  project.yml
docs/: architecture.md  cursor-api.md  cursor-cli.md  product-overview.md  proxy-cache-protocol.md
docs/adr/: 000-template.md  002-targeted-reprocessing.md  003-pipeline-resilience-and-storage-health.md  004-tenant-resource-limits.md  005-per-asset-pipeline.md  006-collections.md  006-filtering-sorting-geo.mdc  007-ratings.md  008-unified-browse-and-saved-views.md  009-face-detection-and-person-recognition.md  010-person-recognition-ui.md  011-ingest-refactor-scan-and-enrich.md  012-split-api-and-web-deploys.md  013-video-transcription.md  014-native-clients.md  015-ios-browse-app.md  auth-and-public-libraries.mdc  cloud-deploy.mdc  phased_cli_migration.mdc  phased_desktop_ui.mdc  phased_mobile_ui.mdc  prod-deploy.mdc  user-accounts.mdc
docs/archive/: 002-targeted-reprocessing.md  003-pipeline-resilience-and-storage-health.md  004-tenant-resource-limits.md  005-per-asset-pipeline.md  006-collections.md  006-filtering-sorting-geo.mdc  007-ratings.md  008-unified-browse-and-saved-views.md  009-face-detection-and-person-recognition.md  010-person-recognition-ui.md  011-ingest-refactor-scan-and-enrich.md  012-split-api-and-web-deploys.md  013-video-transcription.md  README.md  auth-and-public-libraries.mdc  cloud-deploy.mdc  phased_cli_migration.mdc  phased_desktop_ui.mdc  phased_mobile_ui.mdc  prod-deploy.mdc  user-accounts.mdc
docs/reference/: README.md  ai_face_detection_and_dedup.md  ai_vision_metadata.md  bm25_similarity_search.md  deployment-digitalocean.md  video_scene_segmentation.md  worker_base_pattern.md
docs/specs/: architecture.md  cursor-api.md
migrations/control/: README  env.py
migrations/control/versions/: 5ea9891b5c11_initial_control_plane.py  a2b3c4d5e6f7_add_tenant_vision_config.py  b7c8d9e0f1a2_add_api_key_label_and_admin_flag.py  c8d9e0f1a2b3_api_keys_role_replace_is_admin.py  d9e0f1a2b3c4_add_public_libraries_table.py  e1f2a3b4c5d6_phase5_users_and_password_reset_tokens.py  f2a3b4c5d6e7_add_tenant_vision_model_id.py  g3a4b5c6d7e8_add_public_collections_table.py  h4b5c6d7e8f9_add_revoked_tokens_table.py
migrations/tenant/: README  env.py
migrations/tenant/versions/: 95408ad1a2b3_add_artifact_sha256s.py  a0b9c8d7e6f5_repair_cancelled_vision_and_orphaned_search_sync.py  a1b2c3d4e5f0_delete_orphaned_search_sync_worker_jobs.py  a1b2c3d4e5f6_add_scans_table.py  a1b2c3d4e5f6_flexible_embedding_dimensions.py  a1b2c3d4e5f7_add_collections.py  a4b5c6d7e8f9_assets_deleted_at_and_active_view.py  a4b5c6d7e8f9_drop_library_vision_model_id.py  b12fbc1ce2ea_flexible_embedding_dimensions.py  b1c2d3e4f5a6_add_library_is_public.py  b2c3d4e5f6a1_delete_ai_vision_jobs_on_video_assets.py  b2c3d4e5f6a7_add_asset_file_mtime.py  b2c3d4e5f6a8_add_collection_ownership.py  b6c7d8e9f0a1_unique_active_worker_job_per_asset_type.py  c1d2e3f4a5b6_drop_asset_captured_at.py  c2d3e4f5a6b7_add_library_revision.py  c3d4e5f6a7b8_add_library_status.py  c3d4e5f6a7b9_add_asset_ratings.py  d2e3f4a5b6c7_consolidate_duration_sec.py  d2ebbb76fc6f_initial_tenant_schema.py  d3e4f5a6b7c8_drop_library_vision_model_id.py  d4e5f6a7b8c9_add_scans_files_skipped.py  d4e5f6g7h8i9_add_saved_views.py  e3f4a5b6c7d8_ssq_unique_pending_index.py  (+39 more)
quickwit/: asset_index_schema.json  scene_index_schema.json  transcript_index_schema.json
scripts/: deploy-api.sh  deploy-vps.sh  deploy-web.sh  init.sh  migrate.sh  reset-face-clusters.py  update-api.sh  update-vps.sh  update-web.sh
scripts/convert-models/: convert_arcface.py  convert_clip.py
scripts/docker/: 02-pg-hba.sh  pg_hba.conf  postgres-init.sql
src/api/: dependencies.py  main.py  middleware.py
src/cli/: client.py  config.py  ingest.py  main.py  pipeline_dashboard.py  progress.py  proxy_cache.py  proxy_gen.py  repair.py  scan.py  scanner.py  video_index.py
src/core/: asset_status.py  config.py  database.py  logging_config.py  path_filter.py  srt.py
src/metadata/: normalization.py
src/models/: control_plane.py  filter.py  registry.py  tenant.py
src/repository/: control_plane.py  system_metadata.py  tenant.py
src/search/: __init__.py  cleanup.py  postgres_search.py  quickwit_client.py  sync.py
src/server/: config.py  database.py  srt.py
src/shared/: asset_status.py  file_extensions.py  io_utils.py  logging_config.py  utils.py
src/storage/: artifact_store.py  local.py
src/upgrade/: __init__.py  context.py  registry.py  runner.py
src/video/: clip_extractor.py  scene_segmenter.py  video_scanner.py
src/workers/: base.py  embed_worker.py  enqueue.py  exif_extract.py  exif_worker.py  output_events.py  pipeline_supervisor.py  proxy.py  quickwit.py  search_sync.py  video_index_worker.py  video_preview_worker.py  video_vision_worker.py  vision.py  vision_worker.py
tests/: conftest.py  test_admin_api.py  test_admin_cli.py  test_artifact_store.py  test_artifact_upload.py  test_artifacts.py  test_assets_api.py  test_assets_by_path_api.py  test_assets_page_api.py  test_assets_submission_api.py  test_audit_fixes.py  test_auth_hybrid.py  test_auth_phase2_fixes.py  test_auth_rejection.py  test_batch_endpoints.py  test_browse_api.py  test_browse_filters.py  test_bug_fixes.py  test_caption_providers.py  test_caption_slow.py  test_cleanup.py  test_cli.py  test_collection_sharing.py  test_collections_api.py  test_control_plane_repository.py  test_directory_api.py  test_embed_worker.py  test_enqueue.py  test_enqueue_filter.py  test_enqueue_retry.py  test_enrich.py  test_exif_extract.py  test_exif_parsing.py  test_exif_worker.py  test_face_cli.py  test_face_clustering.py  test_face_detection.py  test_face_detection_slow.py  test_face_nearest_people_slow.py  test_face_redetection_representative_slow.py  (+91 more)
(+365 files in other folders)
