[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumiverb"
version = "0.1.0"
description = "AI-powered photo and video library management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # API & web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlmodel>=0.0.14",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3.0",       # pgvector Python client (phase 2: face embeddings)

    # CLI (local agent)
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",

    # Image processing
    "pillow>=10.0",
    "rawpy>=0.26.1",          # RAW format support (CR2, NEF, ARW, DNG, etc.)
    "pyvips>=3.1.1",          # Fast proxy/thumbnail generation (libvips)

    # Video processing
    "imagehash>=4.3.0",       # pHash for scene segmentation
    "opencv-python-headless>=4.8.0",  # Laplacian sharpness, frame manipulation

    # AI & metadata
    "requests>=2.25",         # Moondream Station HTTP client
    "pyexiftool>=0.5",        # EXIF metadata extraction
    "mediapipe>=0.10.0,<0.11",  # Face detection (BlazeFace)
    "rapidfuzz>=3.0.0",       # Semantic deduplication (scene merge)

    # Search
    "PyYAML>=6.0",

    # Utilities
    "python-ulid>=2.0",
    "reverse_geocoder>=1.5",  # GPS → country/region/city
]

[project.scripts]
lumiverb = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-order>=1.0",
    "testcontainers[postgres]>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "fast: no DB, no AI — pure unit tests, mocks, tmp_path only",
    "slow: requires DB (testcontainers Postgres)",
    "ai: requires real AI inference (Moondream Station running)",
    "quickwit: requires dev Quickwit at port 7281",
    "migration: Alembic migration tests (run separately)",
]
# Default: run fast and slow tests; exclude AI and migration suites
addopts = ["-m", "not migration and not ai and not quickwit"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# Ruff (linter + formatter)
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

# =============================================================================
# mypy
# =============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
